Fixed bubbles getting covered by water waves

--- a/resources/styles/backdrop.css
+++ b/resources/styles/backdrop.css
@@ -228,9 +228,10 @@
 /* Qualifications */
 .qualificationContainer {
   margin-top: 20em;
-  width: 100vw;
+  width: 100%;
   height: 30em;
-  position: relative;
+  position: absolute;
+  z-index: 2;
   /*background-color: #30586f;*/
 }
 
